--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,53 @@
+asgiref==3.2.10
 attrs==20.2.0
 Automat==20.2.0
+autopep8==1.5.4
+backcall==0.2.0
 cffi==1.14.3
 constantly==15.1.0
 cryptography==3.1.1
 cssselect==1.1.0
 DAWG-Python==0.7.2
+decorator==4.4.2
+Django==3.1.2
 docopt==0.6.2
 hyperlink==20.0.1
 idna==2.10
 incremental==17.5.0
+ipython==7.18.1
+ipython-genutils==0.2.0
 itemadapter==0.1.1
 itemloaders==1.0.3
+jedi==0.17.2
 jmespath==0.10.0
 lxml==4.6.1
 parsel==1.6.0
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.8
 Protego==0.1.16
+ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.6.0
 pycparser==2.20
 PyDispatcher==2.0.5
+Pygments==2.7.1
 PyHamcrest==2.0.2
 pymorphy2==0.9.1
 pymorphy2-dicts==2.4.393442.3710985
 pymorphy2-dicts-ru==2.4.417127.4579844
 pyOpenSSL==19.1.0
+pytz==2020.1
 queuelib==1.5.0
 Scrapy==2.4.0
 service-identity==18.1.0
 six==1.15.0
+sqlparse==0.4.1
+toml==0.10.1
+traitlets==5.0.5
 Twisted==20.3.0
 w3lib==1.22.0
+wcwidth==0.2.5
 zope.interface==5.1.2
