--- a/frontend/DataRepresentation/package.json
+++ b/frontend/DataRepresentation/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "axios-hooks": "^2.1.0",
+    "chart.js": "^2.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
